src/test/ui/check-static-immutable-mut-slices.stderr
error[E0764]: mutable references are not allowed in statics
  --> $DIR/check-static-immutable-mut-slices.rs:3:37
   |
LL | static TEST: &'static mut [isize] = &mut [];
   |                                     ^^^^^^^ `&mut` is only allowed in `const fn`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0764`.
